@@ -682,3 +682,4 @@ table.insert(tests, "automate_get_content_changed")
 table.insert(tests, "i18n_commit_messages")
 table.insert(tests, "ws_ops_with_wrong_node_type")
 table.insert(tests, "pivot_root_to_new_dir")
+table.insert(tests, "multiple_message_commit")
